@@ -4,6 +4,10 @@
     * Fix bugs of Net::SSLeay#set_SSL_CTX method.
   [Test Improvement]
     * Online tests are skipped in offline systems.
+  [Changes]
+    * $type argument of Net::SSLeay::SSL_CTX#use_certificate_file method becomes optional.
+    * $type argument of Net::SSLeay::SSL_CTX#use_PrivateKey_file method becomes optional.
+    
 0.027 2024-12-12
   [New Features]
     * Add Net::SSLeay::SSL_CTX#set_alpn_select_cb method.
